# stoneshire

./: CMakeLists.txt  LICENSE  README.md
cmake/Modules/: AddCMockaTest.cmake
conf/: conf.c  log.conf  ports.conf
include/: conf.h  err_handlers.h  log.h
log/: log.c
src/: CMakeLists.txt  conf.c  err_handlers.c  main.c
test/: CMakeLists.txt  test_fget_conf_value.c  test_fset_conf_state.c  test_open_conf_f.c  test_open_file.c
